--- a/report_project/reports/templates/reports/informe_create.html
+++ b/report_project/reports/templates/reports/informe_create.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+<!-- {% extends 'base.html' %}
 {% block content %}
     <h1>New post</h1>
     <form action="" method="post">
@@ -6,4 +6,4 @@
         {{ form.as_p }}
         <input type="submit" value="Save" />
     </form>
-{% endblock %}
+{% endblock %} -->
