--- a/report_project/reports/templates/reports/informe_detail.html
+++ b/report_project/reports/templates/reports/informe_detail.html
@@ -5,9 +5,13 @@
         <p>{{ object.informe_code }}</p>
         <p>{{ object.event.event_code}}</p>
         <p>{{ object.fecha }}</p>
+        <img src="{{ satimage }}" alt="" height="42" width="42">
+
     </div>
 
     <p> <a href="{% url 'informe_update' object.pk %}">+ Update Informe</a> </p>
     <p> <a href="{% url 'informe_delete' object.pk %}">+ Delete Blog Post</a> </p>
 
 {% endblock content %}
+
+
