--- a/report_project/reports/templates/reports/informe_detail.html
+++ b/report_project/reports/templates/reports/informe_detail.html
@@ -5,7 +5,8 @@
         <p>{{ object.informe_code }}</p>
         <p>{{ object.event.event_code}}</p>
         <p>{{ object.fecha }}</p>
-        <img src="{{ satimage }}" alt="" height="42" width="42">
+        <p> <img src="{{ object.satimage1.image.url }}" alt=""> </p>
+
 
     </div>
 
