--- a/report_project/reports/templates/reports/informe_form.html
+++ b/report_project/reports/templates/reports/informe_form.html
@@ -15,14 +15,14 @@
     <script>
       $("#id_event").change(function () {               // $ is a shortcut for jQuery
         var url = $("#informeForm").attr("data-satimages-url");  // get the url of the `load_cities` view
-        var eventId = $(this).val();  // get the selected country ID from the HTML input
+        var eventId = $(this).val();  // get the selected event ID from the HTML input
         $.ajax({                // initialize an AJAX request
           url: url,              // set the url of the request (= localhost:8000/hr/ajax/load-cities/)
           data: {
             'event': eventId   // add the country id to the GET parameters > sent to load_cities
           },
           success: function (data) {   // `data` is the return of the `load_cities` view function
-            $("#id_satimage").html(data);   // replace the contents of the city input with 
+            $("#id_satimage1").html(data);   // replace the contents of the city input with 
   // the data that came from the server
           }
         });
