--- a/report_project/reports/templates/base.html
+++ b/report_project/reports/templates/base.html
@@ -9,7 +9,7 @@
 
 <body>
     <header>
-        <h1><a href="/">A Header base.html</a></h1>
+        <h1><a href="/"> SNGRE </a></h1>
     </header>
     <div class="container">
 
