--- a/report_project/reports/templates/reports/informe_detail.html
+++ b/report_project/reports/templates/reports/informe_detail.html
@@ -8,7 +8,7 @@
         <p> <img src="{{ object.satimage1.image.url }}" alt=""> </p>
 
 
-        {% for area in area_set %}
+        {% for area in areaset %}
            {{ area }}
            <p> {{ area.superficie }} </p>
         {% endfor %} 
