--- a/report_project/reports/templates/reports/informe_form.html
+++ b/report_project/reports/templates/reports/informe_form.html
@@ -23,6 +23,7 @@
           },
           success: function (data) {   // `data` is the return of the `load_cities` view function
             $("#id_satimage1").html(data);   // replace the contents of the city input with 
+            $("#id_satimage2").html(data); 
   // the data that came from the server
           }
         });
