--- a/report_project/reports/templates/reports/satimage_dropdown_list_options.html
+++ b/report_project/reports/templates/reports/satimage_dropdown_list_options.html
@@ -1,4 +1,4 @@
 <option value="">---------</option>
 {% for satimage in satimages %}
-    <option value="{{ satimage.pk }}">{{ satimage.banda }} {{ satimage.fecha }} </option>
+    <option value="{{ satimage.pk }}">{{ satimage.fuente }} {{ satimage.banda }}  {{ satimage.fecha }} </option>
 {% endfor %}
