--- a/report_project/reports/templates/reports/informe_list.html
+++ b/report_project/reports/templates/reports/informe_list.html
@@ -26,4 +26,10 @@
             </tbody>
         </table>
     </div>
+
+    <div class="row">
+            <div class="">
+                    <a href="{% url 'informe_create' %}">+ New Informe</a> 
+            </div>     
+    </div>    
 {% endblock content %}
