--- a/report_project/reports/templates/base.html
+++ b/report_project/reports/templates/base.html
@@ -15,26 +15,21 @@
     <link rel="stylesheet" href="{% static 'css/base.css' %}"> 
     <!-- Bootstrap JavaScript -- they are here for the dropdown list to work -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-
 </head>
 
 <body>
     <div class="container">
         <div class="row">
             <header>
-                <h3><a href="/"> SNGRE </a></h3>
+                <h4><a href="/"> SNGRE </a></h4>
             </header>
         </div>
     </div>  
     <div class="container">
-        <div class="row">
-            <div class="">
-                    <a href="{% url 'informe_create' %}">+ New Informe</a> 
-            </div>     
-        </div>         
+    
         {% block content %}
         {% endblock content %}
     </div>
