--- a/report_project/reports/templates/reports/informe_update_form.html
+++ b/report_project/reports/templates/reports/informe_update_form.html
@@ -3,7 +3,10 @@
 
     <h2>Update Informe</h2>
 
-    <form method="post" id="informeForm" data-satimages-url="{% url 'ajax_load_satimages' %}" novalidate>
+    <form method="post" id="informeForm"  novalidate
+        data-satimages-url="{% url 'ajax_load_satimages' %}"
+        data-satimages-url1="{% url 'ajax_load_satimages1' %}"
+        data-satimages-url2="{% url 'ajax_load_satimages2' %}">
       {% csrf_token %}
       <table>
         {{ form.as_table }}
@@ -13,16 +16,33 @@
   
     <script>
       $(document).ready(function () {  // always execute this function to update the dropdown // $ is a shortcut for jQuery
-        var url = $("#informeForm").attr("data-satimages-url");  // get the url of the `load_cities` view
+        var url = $("#informeForm").attr("data-satimages-url1");  // get the url of the `load_cities` view
         var eventId = $("#id_event").val();  // get the selected event ID from the HTML input
+        var satimage1 = $("#id_satimage1").val(); 
         $.ajax({                // initialize an AJAX request
           url: url,              // set the url of the request (= localhost:8000/hr/ajax/load-cities/)
           data: {
-            'event': eventId   // add the country id to the GET parameters  and send it to load_cities
+            'event': eventId, // add the country id to the GET parameters  and send it to load_cities
+            'satimage1': satimage1,  
           },
           success: function (data) {   // `data` is the return value of the `load_cities` view function
             $("#id_satimage1").html(data);   // replace the contents of dropdown list 
-            $("#id_satimage2").html(data);  // the data that came from the server
+          }
+        });
+      });
+
+      $(document).ready(function () {  // always execute this function to update the dropdown // $ is a shortcut for jQuery
+        var url = $("#informeForm").attr("data-satimages-url2");  // get the url of the `load_cities` view
+        var eventId = $("#id_event").val();  // get the selected event ID from the HTML input
+        var satimage2 = $("#id_satimage2").val(); 
+        $.ajax({                // initialize an AJAX request
+          url: url,              // set the url of the request (= localhost:8000/hr/ajax/load-cities/)
+          data: {
+            'event': eventId, // add the country id to the GET parameters  and send it to load_cities
+            'satimage2': satimage2,  
+          },
+          success: function (data) {   // `data` is the return value of the `load_cities` view function
+            $("#id_satimage2").html(data);   // replace the contents of dropdown list 
           }
         });
       });
