--- a/report_project/reports/templates/reports/informe_detail.html
+++ b/report_project/reports/templates/reports/informe_detail.html
@@ -24,8 +24,8 @@
         {% endfor %} 
     </div>
 
-    <p> <a href="{% url 'informe_update' object.pk %}">+ Update Informe</a> </p>
-    <p> <a href="{% url 'informe_delete' object.pk %}">+ Delete Informe</a> </p>
+    <p> <a href="{% url 'informe_update' informe.id %}">+ Update Informe</a> </p>
+    <p> <a href="{% url 'informe_delete' informe.id %}">+ Delete Informe</a> </p>
 
 {% endblock content %}
 
