--- a/report_project/reports/templates/reports/informe_list.html
+++ b/report_project/reports/templates/reports/informe_list.html
@@ -9,7 +9,7 @@
         <h3>Informe List</h3>
     </div>
     <div class ="row">
-        <table class="table table-bordered">
+        <table class="table table-bordered w-auto">
             <thead>
                 <th>Code</th>
                 <th>Event</th>
